Revamp About and Home sections, update styles
Enhanced the About section with a new heading and detailed introduction. Updated the Home section with a concise description and added animated counters for experience and projects. Adjusted CSS variable naming for gray color and added font variables. Removed unused font imports and variables from layout.js for cleaner setup.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
   --color-secondary: #00fff6;
   --heading-color: #6fffe9;
   --primary-black-color: #0b132b;
-  --gray-color: #3a506b;
+  --color-gray: #a5a7aa;
   --white-color: #ffffff;
   --textcolor: #6fffe9;
   --color-WhiteT: #ffffff;
@@ -28,6 +28,10 @@
   --color-lightGreen: rgb(91 192 190 / 33%);
   --color-lightGreen2: #5bc0be2b;
   --color-lightGreen3: #3a506b;
+  --font-ex-font: var(--ex-font);
+  --font-body: var(--body-font);
+  --font-heading: var(--heading-font);
+  --font-accent: var(--accent-font);
 }
 :root {
   --heading-font: "Bitter", "Segoe UI", serif;
