--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -290,3 +290,157 @@ h6 {
 }
 
 /* mobile menu  */
+.skillsouter:after {
+  content: "";
+  background: linear-gradient(90deg, #00060e, transparent);
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 100%;
+}
+.skillsouter::before {
+  content: "";
+  background: linear-gradient(90deg, transparent, #00060e);
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100px;
+  height: 100%;
+}
+/*  */
+/* line */
+
+.lines {
+  width: 1600px;
+  max-width: 100vw;
+  height: 100%;
+  margin: auto;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: -1;
+}
+
+.line {
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  top: 0;
+  background: rgba(255, 255, 255, 0.1);
+  overflow: hidden;
+}
+
+.line::after {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 15vh;
+  width: 100%;
+  top: -50%;
+  left: 0;
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    var(--color-secondary) 75%,
+    var(--color-secondary) 100%
+  );
+  animation: drop 7s 0s infinite;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+}
+
+/* 6 lines, evenly spaced in 1600px container */
+.line:nth-child(1) {
+  left: 0%;
+}
+.line:nth-child(2) {
+  left: 20%;
+}
+.line:nth-child(3) {
+  left: 40%;
+}
+.line:nth-child(4) {
+  left: 60%;
+}
+.line:nth-child(5) {
+  left: 80%;
+}
+.line:nth-child(6) {
+  left: 100%;
+}
+
+.line:nth-child(1)::after {
+  animation-delay: 2s;
+}
+.line:nth-child(2)::after {
+  animation-delay: 2.2s;
+}
+.line:nth-child(3)::after {
+  animation-delay: 2.4s;
+}
+.line:nth-child(4)::after {
+  animation-delay: 2.6s;
+}
+.line:nth-child(5)::after {
+  animation-delay: 2.8s;
+}
+.line:nth-child(6)::after {
+  animation-delay: 3s;
+}
+@keyframes drop {
+  0% {
+    top: -50%;
+  }
+  100% {
+    top: 110%;
+  }
+}
+
+.backgroundGr {
+  background: linear-gradient(180deg, #1c2541, #202c44, #00060e);
+}
+
+@media (min-width: 1600px) and (max-width: 4000px) {
+  .csWidth {
+    max-width: 100rem;
+  }
+}
+@media (min-width: 1440px) and (max-width: 1599px) {
+  .csWidth {
+    max-width: 95rem;
+  }
+}
+@media (min-width: 1345px) and (max-width: 1439px) {
+  .csWidth {
+    max-width: 82rem;
+  }
+}
+@media (min-width: 1300px) and (max-width: 1344px) {
+  .csWidth {
+    max-width: 80rem;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1299px) {
+  .csWidth {
+    max-width: 75rem;
+  }
+}
+@media (min-width: 1161px) and (max-width: 1199px) {
+  .csWidth {
+    max-width: 70rem;
+  }
+}
+@media (min-width: 1100px) and (max-width: 1160px) {
+  .csWidth {
+    max-width: 65rem;
+  }
+}
+@media (min-width: 1025px) and (max-width: 1099px) {
+  .csWidth {
+    max-width: 56rem;
+  }
+}
