--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,16 +28,14 @@
   --color-lightGreen: rgb(91 192 190 / 33%);
   --color-lightGreen2: #5bc0be2b;
   --color-lightGreen3: #3a506b;
-  --font-ex-font: var(--ex-font);
   --font-body: var(--body-font);
   --font-heading: var(--heading-font);
   --font-accent: var(--accent-font);
 }
 :root {
-  --heading-font: "Bitter", "Segoe UI", serif;
+  --heading-font: "Rajdhani", serif;
   --body-font: "Lato", "Segoe UI", sans-serif;
   --accent-font: "Bitter", "Segoe UI", serif;
-  --ex-font: "Cinzel", serif;
 }
 /* new  */
 html {
@@ -130,7 +128,9 @@ input.form-control:focus {
 
 h1 {
   font-size: 7rem;
-  line-height: 1.5;
+  font-weight: 500;
+  line-height: 1.3;
+  letter-spacing: -0.8px;
 }
 @media (max-width: 1600px) {
   h1 {
@@ -162,6 +162,8 @@ h1 {
 h2 {
   font-size: 5.5rem;
   line-height: 1.3;
+  letter-spacing: -0.8px;
+  font-weight: 500;
 }
 @media (max-width: 1600px) {
   h2 {
@@ -401,9 +403,50 @@ h6 {
 }
 
 .backgroundGr {
-  background: linear-gradient(180deg, #1c2541, #202c44, #00060e);
+  background: linear-gradient(#1c25413d, #202c44, #00060e);
+}
+.submitButton {
+  background: transparent;
+  border: 1px solid var(--color-secondary);
+  color: var(--color-secondary);
+  transition: all 0.3s ease-in-out;
 }
 
+.submitButton:hover {
+  color: #050f1a;
+  background: var(--color-secondary);
+  box-shadow: 0 0 10px var(--color-secondary), 0 0 40px var(--color-secondary),
+    0 0 80px var(--color-secondary);
+}
+select.mySelect {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='white' d='M5.516 7.548l4.484 4.484 4.484-4.484L16 9.032l-6 6-6-6z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 1rem center !important;
+  background-size: 1.5rem;
+  padding-right: 2.5rem;
+  cursor: pointer;
+}
+::picker(select) {
+  appearance: base-select !important;
+  overflow: hidden !important;
+}
+select.mySelect > option {
+  border-radius: 20px !important;
+  /* background: #00fff6 !important; */
+  color: var(--color-WhiteT) !important;
+  overflow: hidden;
+}
+option:hover {
+  background: var(--color-secondary) !important;
+  color: #050f1a !important;
+}
+input:-internal-autofill-selected {
+  background: var(--color-secondary) !important;
+  color: #050f1a !important;
+}
 @media (min-width: 1600px) and (max-width: 4000px) {
   .csWidth {
     max-width: 100rem;
