--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,11 +64,11 @@ body {
 /* Tooltip for Navbar icons */
 .customTooltip {
   position: absolute;
-  left: 50%;
-  bottom: 110%;
-  transform: translateX(-50%);
+  left: -5rem;
+  top: 50%;
+  transform: translateY(-50%);
   background: #222;
-  color: #fff;
+  color: var(--color-secondary);
   padding: 0.4rem 1rem;
   border-radius: 0.5rem;
   font-size: 1.2rem;
@@ -77,6 +77,7 @@ body {
   pointer-events: none;
   transition: all 0.5s ease-in-out;
   z-index: 10;
+  width: max-content;
 }
 .navbar a:hover .customTooltip,
 .navbar a:focus .customTooltip {
