--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -339,17 +339,15 @@ h6 {
   height: 100%;
 }
 /*  */
-/* line */
+/* Responsive Animated Lines Background */
 
 .lines {
-  width: 1600px;
-  max-width: 100vw;
+  width: 100vw;
   height: 100%;
   margin: auto;
   position: fixed;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 0;
   z-index: -1;
 }
 
@@ -381,44 +379,116 @@ h6 {
   animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
 }
 
-/* 6 lines, evenly spaced in 1600px container */
-.line:nth-child(1) {
-  left: 0%;
-}
-.line:nth-child(2) {
-  left: 20%;
-}
-.line:nth-child(3) {
-  left: 40%;
-}
-.line:nth-child(4) {
-  left: 60%;
-}
-.line:nth-child(5) {
-  left: 80%;
-}
-.line:nth-child(6) {
-  left: 100%;
+/* Desktop (1200px+) - 6 lines positioned like 12-column grid */
+@media (min-width: 1200px) {
+  .line:nth-child(1) {
+    left: 8.33%; /* 1/12 */
+  }
+  .line:nth-child(2) {
+    left: 25%; /* 3/12 */
+  }
+  .line:nth-child(3) {
+    left: 41.67%; /* 5/12 */
+  }
+  .line:nth-child(4) {
+    left: 58.33%; /* 7/12 */
+  }
+  .line:nth-child(5) {
+    left: 75%; /* 9/12 */
+  }
+  .line:nth-child(6) {
+    left: 91.67%; /* 11/12 */
+  }
+
+  .line:nth-child(n + 7) {
+    display: none;
+  }
+
+  .line:nth-child(1)::after {
+    animation-delay: 2s;
+  }
+  .line:nth-child(2)::after {
+    animation-delay: 2.2s;
+  }
+  .line:nth-child(3)::after {
+    animation-delay: 2.4s;
+  }
+  .line:nth-child(4)::after {
+    animation-delay: 2.6s;
+  }
+  .line:nth-child(5)::after {
+    animation-delay: 2.8s;
+  }
+  .line:nth-child(6)::after {
+    animation-delay: 3s;
+  }
 }
 
-.line:nth-child(1)::after {
-  animation-delay: 2s;
+/* Tablet (768px - 1199px) - 4 lines */
+@media (min-width: 768px) and (max-width: 1199px) {
+  .line:nth-child(1) {
+    left: 15%;
+  }
+  .line:nth-child(2) {
+    left: 35%;
+  }
+  .line:nth-child(3) {
+    left: 55%;
+  }
+  .line:nth-child(4) {
+    left: 75%;
+  }
+
+  .line:nth-child(n + 5) {
+    display: none;
+  }
+
+  .line:nth-child(1)::after {
+    animation-delay: 1.5s;
+  }
+  .line:nth-child(2)::after {
+    animation-delay: 2s;
+  }
+  .line:nth-child(3)::after {
+    animation-delay: 2.5s;
+  }
+  .line:nth-child(4)::after {
+    animation-delay: 3s;
+  }
 }
-.line:nth-child(2)::after {
-  animation-delay: 2.2s;
+
+/* Mobile (up to 767px) - 3 lines */
+@media (max-width: 767px) {
+  .line:nth-child(1) {
+    left: 20%;
+  }
+  .line:nth-child(2) {
+    left: 50%;
+  }
+  .line:nth-child(3) {
+    left: 80%;
+  }
+
+  .line:nth-child(n + 4) {
+    display: none;
+  }
+
+  .line:nth-child(1)::after {
+    animation-delay: 1s;
+  }
+  .line:nth-child(2)::after {
+    animation-delay: 2s;
+  }
+  .line:nth-child(3)::after {
+    animation-delay: 3s;
+  }
+
+  .line::after {
+    height: 12vh;
+    animation-duration: 5s;
+  }
 }
-.line:nth-child(3)::after {
-  animation-delay: 2.4s;
-}
-.line:nth-child(4)::after {
-  animation-delay: 2.6s;
-}
-.line:nth-child(5)::after {
-  animation-delay: 2.8s;
-}
-.line:nth-child(6)::after {
-  animation-delay: 3s;
-}
+
 @keyframes drop {
   0% {
     top: -50%;
@@ -485,7 +555,7 @@ input:-internal-autofill-selected {
 }
 @media (min-width: 1345px) and (max-width: 1439px) {
   .csWidth {
-    max-width: 82rem;
+    max-width: 87rem;
   }
 }
 @media (min-width: 1300px) and (max-width: 1344px) {
@@ -493,19 +563,24 @@ input:-internal-autofill-selected {
     max-width: 80rem;
   }
 }
-@media (min-width: 1200px) and (max-width: 1299px) {
+@media (min-width: 1275px) and (max-width: 1299px) {
   .csWidth {
-    max-width: 75rem;
+    max-width: 80rem;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1274px) {
+  .csWidth {
+    max-width: 73rem;
   }
 }
 @media (min-width: 1161px) and (max-width: 1199px) {
   .csWidth {
-    max-width: 70rem;
+    max-width: 68rem;
   }
 }
 @media (min-width: 1100px) and (max-width: 1160px) {
   .csWidth {
-    max-width: 65rem;
+    max-width: 63rem;
   }
 }
 @media (min-width: 1025px) and (max-width: 1099px) {
