--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -588,3 +588,67 @@ input:-internal-autofill-selected {
     max-width: 56rem;
   }
 }
+.animatedBG {
+  transition: all 5s ease-in-out;
+  background-position: top !important;
+  background-size: cover !important;
+}
+.mainDv:hover .animatedBG {
+  background-position: bottom !important;
+}
+/**
+ * ==============================================
+ * Dot Flashing
+ * ==============================================
+ */
+.dotFlashing {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: var(--color-primary);
+  color: var(--color-primary);
+  animation: dotFlashing 1s infinite linear alternate;
+  animation-delay: 0.5s;
+}
+
+.dotFlashing::before,
+.dotFlashing::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+}
+
+.dotFlashing::before {
+  left: -15px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: var(--color-primary);
+  color: var(--color-primary);
+  animation: dotFlashing 1s infinite alternate;
+  animation-delay: 0s;
+}
+
+.dotFlashing::after {
+  left: 15px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: var(--color-secondary);
+  color: var(--color-primary);
+  animation: dotFlashing 1s infinite alternate;
+  animation-delay: 1s;
+}
+
+@keyframes dotFlashing {
+  0% {
+    background-color: var(--color-secondary);
+  }
+
+  50%,
+  100% {
+    background-color: rgba(152, 128, 255, 0.2);
+  }
+}
