--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -652,3 +652,19 @@ input:-internal-autofill-selected {
     background-color: rgba(152, 128, 255, 0.2);
   }
 }
+.contactForm input::placeholder,
+.contactForm textarea::placeholder {
+  color: #fff;
+  opacity: 1 !important; /* Firefox */
+}
+.contactForm input:-ms-input-placeholder, /* Internet Explorer 10-11 */
+.contactForm textarea:-ms-input-placeholder {
+  color: #fff;
+  opacity: 1 !important;
+}
+.contactForm input::-ms-input-placeholder, /* Microsoft Edge */
+.contactForm textarea::-ms-input-placeholder {
+  color: #fff;
+  opacity: 1 !important;
+}
+/* End of file */
