--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -668,3 +668,10 @@ input:-internal-autofill-selected {
   opacity: 1 !important;
 }
 /* End of file */
+.SelectBoxValue {
+  overflow: hidden;
+  text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 86%;
+}
